--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,11 +10,11 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Express Todo</a>  
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="/">Express Todo</a>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01"> 
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="/">首頁</a>
@@ -23,10 +23,14 @@
               <a class="nav-link" href="/todos/new">建立</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          <ul class="navbar-nav mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="/users/login">登入</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/register">註冊</a>
+            </li>
+          </ul>
         </div>
     </nav>
     <div class="container-sm mt-4">
