--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,14 +3,14 @@
   <div class="row">
     <div class="col-md-6 m-auto border border-secondary rounded-lg p-3">
       <h2 class="p-3 mb-3 text-center bg-light rounded-lg">登入</h2>
-      <form>
+      <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">信箱</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="您的信箱...">
+          <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="您的信箱...">
         </div>
         <div class="form-group">
           <label for="password">密碼</label>
-          <input type="password" class="form-control" id="password" placeholder="您的密碼...">
+          <input type="password" class="form-control" id="password" name="password" placeholder="您的密碼...">
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-primary mb-1 w-100">登入</button>
