--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,13 +23,22 @@
               <a class="nav-link" href="/todos/new">建立</a>
             </li>
           </ul>
-          <ul class="navbar-nav mt-2 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/users/login">登入</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/users/register">註冊</a>
-            </li>
+          <ul class="navbar-nav mt-2 mt-lg-0 mr-5">
+            <% if(!isAuthenticated){ %> 
+              <li class="nav-item">
+                <a class="nav-link" href="/users/login">登入</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/register">註冊</a>
+              </li>
+            <% }else{ %>
+              <li class="nav-item d-flex">
+                <a class="nav-link" href="#">User: <%= user.name %> </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/logout">登出</a>
+              </li>
+            <% } %> 
           </ul>
         </div>
     </nav>
