--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col-md-6 m-auto border border-secondary rounded-lg p-3">
       <h2 class="p-3 mb-3 text-center bg-light rounded-lg">登入</h2>
+      <%- include("../partials/message") %>
       <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">信箱</label>
