--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col-md-6 m-auto border border-secondary rounded-lg p-3">
       <h2 class="p-3 mb-3 text-center bg-light rounded-lg">註冊</h2>
+      <%- include("../partials/message") %>
       <form action="/users/register" method="POST">
         <div class="form-group">
           <label for="name">帳號</label>
