add env, facebook login strategy

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -14,7 +14,8 @@
           <input type="password" class="form-control" id="password" name="password" placeholder="您的密碼...">
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-primary mb-1 w-100">登入</button>
+          <button type="submit" class="btn btn-success mb-1 btn-block">登入</button>
+          <a href="/auth/facebook" class="btn btn-primary btn-block">Facebook 登入</a>
         </div>
         <p class="mb-0">
           <span>尚未註冊?</span>
