--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -28,7 +28,8 @@
             <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="確認密碼...">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary mb-1 w-100">註冊</button>
+            <button type="submit" class="btn btn-success mb-1 btn-block">註冊</button>
+            <a href="/auth/facebook" class="btn btn-primary btn-block">Facebook 登入</a>
         </div>
         <p class="mb-0">
           <span>已經註冊?</span>
