--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -5,6 +5,13 @@
       <span aria-hidden="true">&times;</span>
     </button>
 </div>
+<% }else if(error_msg.length !== 0){ %>
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <%= error_msg %>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+  </div>
 <% }else if(warning_msg.length !== 0){ %>
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
       <%= warning_msg %>
