--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,11 @@
         <div class="card mb-3">
             <h3 class="card-header d-flex justify-content-between">
                 <span class="font-weight-bold">
-                    <span class="mr-2"><%= todo.title %></span>  
+                    <!-- <input type="checkbox" class="todo-toggle" data-id=""> -->
+                    <!-- todo._id -->
+                    <span class="mr-2">
+                        <%= todo.title %>
+                    </span>  
                     <span class="text-warning">
                         <% if(todo.isImportant) { %>
                             <i class="fas fa-star"></i> 
