--- a/views/todos/edit.ejs
+++ b/views/todos/edit.ejs
@@ -13,7 +13,7 @@
         <div class="form-group">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="important" name="important" <%= todo.isImportant ? "checked" : "" %> >
-                <label class="form-check-label" for="important">
+                <label class="form-check-label mt-1 ml-2" for="important">
                     重要
                 </label>
             </div>
